Fix logo size on iOS 10 (#2268)

--- a/website/src/views/AppShell.scss
+++ b/website/src/views/AppShell.scss
@@ -27,7 +27,6 @@ $logo-vert-padding: 0.875rem;
 
 .brandLogo {
   width: 100%;
-  height: 100%;
 }
 
 .navRight {
